# main.go
@@ -8,6 +8,7 @@ import (
 	config "koka_style/config"
 	database "koka_style/database"
 	handler "koka_style/handlers"
+	middleware "koka_style/middlewares"
 
 	_ "koka_style/docs"
 )
@@ -26,8 +27,11 @@ func main() {
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	router.GET("/", handler.Root(db))
+
 	router.POST("/sign_up", handler.SignUp(db))
 	router.POST("/login", handler.Login(db))
+
+	router.GET("/products", middleware.AuthMiddleware(), handler.GetProducts(db))
 
 	router.Run(":8080")
 }
